# ESP32-uwb

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/gc9a01/: CMakeLists.txt
components/lis2mdl/: CMakeLists.txt  lis2mdl_reg.h
components/lsm6dsox/: CMakeLists.txt  lsm6dsox_reg.c  lsm6dsox_reg.h
components/sht4x/: CMakeLists.txt  sensirion_i2c_hal.c  sensirion_i2c_hal.h
components/tsl2591/: CMakeLists.txt  tsl2591.c  tsl2591.h
power_analysis/data/: esp.mat  esp_acc_gyro_450lux.mat  esp_brightness_450lux.mat  esp_display_100lux.mat  esp_display_450lux.mat  esp_magnet_450lux.mat  esp_temp_450lux.mat  esp_wifi_450luxM.mat
power_analysis/matlab/: script.m
src/: CMakeLists.txt  FP1.c
